<resources>
    <string name="app_name">MMU Graduation</string>
    <string-array name="programme_level_array">
        <item>Diploma</item>
        <item>Bachelor\'s Degree</item>
        <item>Master\'s Degree</item>
        <item>Doctorate</item>
    </string-array>
    <string-array name="faculty_array">
        <item>Centre for Diploma Programme</item>
        <item>Faculty of Business</item>
        <item>Faculty of Computing and Informatics</item>
        <item>Faculty of Creative Multimedia</item>
        <item>Faculty of Engineering</item>
        <item>Faculty of Engineering and Technology</item>
        <item>Faculty of Information Science and Technology</item>
        <item>Faculty of Law</item>
        <item>Faculty of Management</item>
        <item>Graduate School of Management</item>
    </string-array>
    <string-array name="programme_array">
        <item>Diploma in Accounting</item>
        <item>Diploma in Business Administration</item>
        <item>Diploma in Business Information Systems</item>
        <item>Diploma in Electronic Engineering</item>
    </string-array>
    <string-array name="status_array">
        <item>Active</item>
        <item>Complete</item>
        <item>Pending finance</item>
        <item>Pending MUET</item>
        <item>Pending approval</item>
    </string-array>
    <string-array name="muet_grading_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="add">add</string>
    <string name="share">Share</string>
    <string name="action_categorise">View courses in group</string>
    <string name="course_name">Course Name</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="section_title">Section One</string>
    <string name="downloaded">Downloaded</string>
    <string name="feedback">Send feedback</string>
    <string name="help">Help</string>
    <string name="help_feedback"><![CDATA[Help & feedback]]></string>
    <string name="programme">Course</string>
    <string name="profile">Profile</string>
    <string name="student">Student</string>
    <string name="save">SAVE</string>
    <string name="logout">Logout</string>
    <string name="graduation">Graduation</string>
</resources>
