<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/drawer_favourite"
            android:icon="@mipmap/ic_favorite_black_24dp"
            android:title="@string/favourite" />

        <item
            android:id="@+id/section"
            android:title="@string/section_title">
            <menu>
                <item
                    android:id="@+id/drawer_favourite_1"
                    android:icon="@mipmap/ic_favorite_black_24dp"
                    android:title="@string/favourite" />

                <item
                    android:id="@+id/drawer_downloaded"
                    android:icon="@mipmap/ic_file_download_black_24dp"
                    android:title="@string/downloaded" />
            </menu>
        </item>

        <item
            android:id="@+id/drawer_settings"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/settings" />

    </group>
</menu>